--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,7 +3,7 @@
 
 # Color theme.
 #   Choose from `default`, `ocean`, `forest`, `dark`, `apogee`, `1950s`, `coffee`, `rose`, `strawberry`, `mr_robot`.
-color_theme = "apogee"
+color_theme = "coffee"
 # Enable users to switch between day and night mode?
 day_night = true
 
@@ -59,7 +59,7 @@ time_format = "3:04 PM"
 
 # Enter contact details (optional). To hide a field, clear it to "".
 email = "milindmanoj.kulgod@mavs.uta.edu"
-phone = "(469)-487-3183"
+phone = "+1 (469)-487-3183"
 address = "The University of Texas at Arlington"
 
 # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
@@ -72,11 +72,8 @@ address = "The University of Texas at Arlington"
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/Twitter"},
-  {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
-  {icon = "linkedin", icon_pack = "fab", name = "Connect on LinkedIn", link = "https://keybase.io/"},
-  {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
-  # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
+  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/MilindKulgod97"},
+  {icon = "linkedin", icon_pack = "fab", name = "Connect on LinkedIn", link = "https://www.linkedin.com/in/milind-kulgod-242a92163/"},
   ]
 
 # Display a map.
