--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -7,11 +7,20 @@
   name = "Home"
   url = "#about"
   weight = 10
-
+  
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "Accomplishments"
+  url = "#accomplishments"
+  weight = 30
+  
+  [[main]]
+  name = "Skills"
+  url = "#skills"
   weight = 20
+[[main]]
+  name = "Experience"
+  url = "#experience"
+  weight = 40
 
 [[main]]
   name = "Projects"
