--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -36,8 +36,12 @@
   name = "Contact"
   url = "#contact"
   weight = 50
-
+  
+[[main]]
+  name = "Posts"
+  url = "#posts"
+  weight = 60
 [[main]]
     name = "CV"
     url = "Personal CV.pdf"
-    weight = 60
+    weight = 70
